--- a/profile.yml
+++ b/profile.yml
@@ -3,12 +3,20 @@ language:
   code: "vi"
 
 speech-to-text:
+  acoustic-model-type: "kaldi"
   kaldi:
     model-type: "gmm"
 
 training:
+  acoustic-model-type: "kaldi"
   kaldi:
     model-type: "gmm"
+  large-files:
+    - !env "${profile_dir}/base_dictionary.txt"
+    - !env "${profile_dir}/language_model.txt"
+    - !env "${profile_dir}/g2p.fst"
+    - !env "${profile_dir}/acoustic_model/model/final.mdl"
+    - !env "${profile_dir}/acoustic_model/model/graph/HCLG.fst"
 
 text-to-speech:
   espeak:
