--- a/profile.yml
+++ b/profile.yml
@@ -1,3 +1,7 @@
+---
+name: "vi_kaldi-montreal"
+version: "1.1"
+
 language:
   name: "vietnamese"
   code: "vi"
@@ -13,7 +17,8 @@ training:
     model-type: "gmm"
   large-files:
     - !env "${profile_dir}/base_dictionary.txt"
-    - !env "${profile_dir}/language_model.txt"
+    - !env "${profile_dir}/base_language_model.txt"
+    - !env "${profile_dir}/base_language_model.fst"
     - !env "${profile_dir}/g2p.fst"
     - !env "${profile_dir}/acoustic_model/model/final.mdl"
     - !env "${profile_dir}/acoustic_model/model/graph/HCLG.fst"
